feat: initialize legal moves in SpinHexModel constructor and update getLegalMoves method